Bug #47353
mds: purge_queue's _calculate_ops is inaccurate
% Done:
0%
Source:
Community (dev)
Tags:
Backport:
octopus,nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Description
2020-09-08T13:59:22.058+0800 7f44bc654700 20 mds.0.purge_queue _can_consume: 0/16 ops, 0/64 files
2020-09-08T13:59:22.058+0800 7f44bc654700 20 mds.0.purge_queue _consume: decoding entry
2020-09-08T13:59:22.058+0800 7f44bc654700 20 mds.0.purge_queue _consume: executing item (0x10000000001)
2020-09-08T13:59:22.058+0800 7f44bc654700 10 mds.0.purge_queue _execute_item: remove backtrace object 10000000001.00000000 pool 3 snapc 1=[]
2020-09-08T13:59:22.058+0800 7f44bc654700 20 mds.0.purge_queue _can_consume: 2/16 ops, 1/64 files <<<<<<<<<<<<<<< one file, but with two ops
2020-09-08T13:59:22.058+0800 7f44bc654700 10 mds.0.purge_queue _consume: not readable right now
2020-09-08T13:59:22.063+0800 7f44bc654700 10 mds.0.purge_queue _execute_item_complete: complete at 0x400065
2020-09-08T13:59:22.063+0800 7f44bc654700 10 mds.0.purge_queue _execute_item_complete: expiring to 0x400065
2020-09-08T13:59:22.063+0800 7f44bc654700 10 mds.0.purge_queue _execute_item_complete: completed item for ino 0x10000000001
2020-09-08T13:59:22.063+0800 7f44bc654700 10 mds.0.purge_queue _execute_item_complete: in_flight.size() now 0
2020-09-08T13:59:22.063+0800 7f44bc654700 10 mds.0.purge_queue _execute_item_complete: left purge items in journal: 0 (purge_item_journal_size/write_pos/read_pos/expire_pos) now at (101/4194405/4194405/4194405)
2020-09-08T13:59:22.063+0800 7f44bc654700 20 mds.0.purge_queue _can_consume: 0/16 ops, 0/64 files
2020-09-08T13:59:22.063+0800 7f44bc654700 10 mds.0.purge_queue _consume: not readable right now
Related issues
History
#1 Updated by Patrick Donnelly 5 months ago
- Status changed from New to Fix Under Review
- Assignee set to Yanhu Cao
- Target version set to v16.0.0
- Source set to Community (dev)
- Backport set to octopus,nautilus
- Pull request ID set to 37037
- Component(FS) MDS added
#2 Updated by Patrick Donnelly 4 months ago
- Status changed from Fix Under Review to Pending Backport
#3 Updated by Nathan Cutler 4 months ago
- Copied to Backport #47604: octopus: mds: purge_queue's _calculate_ops is inaccurate added
#4 Updated by Nathan Cutler 4 months ago
- Copied to Backport #47605: nautilus: mds: purge_queue's _calculate_ops is inaccurate added
#5 Updated by Nathan Cutler 4 months ago
- Status changed from Pending Backport to Resolved
While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".